--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "ndoolan360-site",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "engines": {
+    "npm": ">=10.0.0 <11.0.0",
+    "node": ">=18.0.0 <19.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
