--- a/package.json
+++ b/package.json
@@ -1,24 +1,34 @@
 {
-  "name": "ndoolan360-site",
-  "private": true,
-  "version": "1.0.0",
-  "type": "module",
-  "engines": {
-    "npm": ">=10.0.0 <11.0.0",
-    "node": ">=18.0.0 <19.0.0"
-  },
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview --port 8080"
-  },
-  "devDependencies": {
-    "@types/dompurify": "^3.0.5",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.0"
-  },
-  "dependencies": {
-    "@vercel/analytics": "^1.1.1",
-    "dompurify": "^3.0.6"
-  }
+    "name": "ndoolan360-site",
+    "private": true,
+    "version": "1.0.1",
+    "type": "module",
+    "engines": {
+        "npm": ">=10.0.0 <11.0.0",
+        "node": ">=18.0.0 <19.0.0"
+    },
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview --port 8080",
+        "lint": "eslint . --ignore-path .gitignore --ext .ts",
+        "format": "prettier . --check --ignore-path .gitignore",
+        "test": "echo No tests created yet"
+    },
+    "devDependencies": {
+        "@types/dompurify": "^3.0.5",
+        "@typescript-eslint/eslint-plugin": "^6.11.0",
+        "@typescript-eslint/parser": "^6.11.0",
+        "eslint": "^8.53.0",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-import": "^2.29.0",
+        "prettier": "^3.1.0",
+        "typescript": "^5.2.2",
+        "vite": "^5.0.0",
+        "vite-plugin-eslint": "^1.8.1"
+    },
+    "dependencies": {
+        "@vercel/analytics": "^1.1.1",
+        "dompurify": "^3.0.6"
+    }
 }
