--- a/package.json
+++ b/package.json
@@ -6,19 +6,22 @@
   "scripts": {
     "dev": "bunx --bun vite",
     "build": "vite build",
+    "preview": "vite preview",
     "check": "bunx --bun @biomejs/biome check .",
     "ci": "bunx --bun @biomejs/biome ci ."
   },
   "devDependencies": {
     "@biomejs/biome": "^1.4.1",
     "@happy-dom/global-registrator": "^12.10.3",
+    "@types/bun": "^1.0.0",
     "@types/dompurify": "^3.0.5",
     "@types/web": "^0.0.125",
     "autoprefixer": "^10.4.16",
-    "bun-types": "^1.0.15",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.3.2",
-    "vite": "^5.0.4"
+    "vite": "^5.0.4",
+    "vite-plugin-pwa": "^0.17.4",
+    "vite-plugin-sitemap": "^0.5.3"
   },
   "dependencies": {
     "@vercel/analytics": "^1.1.1",
