--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
     "@types/bun": "^1.0.0",
     "@types/dompurify": "^3.0.5",
     "@types/web": "^0.0.125",
-    "autoprefixer": "^10.4.16",
-    "tailwindcss": "^3.3.5",
-    "typescript": "^5.3.2",
-    "vite": "^5.0.4",
-    "vite-plugin-pwa": "^0.17.4",
-    "vite-plugin-sitemap": "^0.5.3"
+    "typescript": "^5.3.2"
   },
   "dependencies": {
     "@vercel/analytics": "^1.1.1",
-    "dompurify": "^3.0.6"
+    "autoprefixer": "^10.4.16",
+    "dompurify": "^3.0.6",
+    "tailwindcss": "^3.4.0",
+    "vite": "^5.0.10",
+    "vite-plugin-pwa": "^0.17.4",
+    "vite-plugin-sitemap": "^0.5.3"
   },
   "browserslist": [
     "defaults"
