--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,8 @@
     "target": "ES2022",
     "useDefineForClassFields": true,
     "module": "ESNext",
-    "lib": ["ES2022", "dom", "dom.iterable"],
+    "lib": ["ES2022"],
     "skipLibCheck": true,
-    "types": ["web", "vite/client"],
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
@@ -15,6 +14,5 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "baseUrl": "./src",
   }
 }
