--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,17 +15,18 @@ jobs:
             - name: Checkout code
               uses: actions/checkout@v4
 
-            - name: Setup Bun
-              uses: oven-sh/setup-bun@v1
+            - name: Setup Biome
+              uses: biomejs/setup-biome@v1
               with:
-                bun-version: 1.0.15
+                version: 1.4.1
 
-            - name: Cache Node modules
-              uses: actions/cache@v3
+            - name: Run Biome CI
+              run: biome ci .
+
+            - name: Setup Go
+              uses: actions/setup-go@v4
               with:
-                  path: node_modules
-                  key: bun-${{ hashFiles('**/bun.lockb') }}
-                  restore-keys: bun-
+                go-version: 1.20.2
 
-            - run: bun install
-            - run: bun ci
+            - name: Run Go Tests
+              run: go test
