--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "version": "1.1.0",
   "type": "module",
   "scripts": {
-    "dev": "bunx --bun vite",
+    "dev": "bun vite",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "bunx --bun @biomejs/biome check .",
-    "ci": "bunx --bun @biomejs/biome ci"
+    "start": "bun vercel dev",
+    "check": "bun biome check .",
+    "ci": "bun biome ci ."
   },
   "devDependencies": {
     "@biomejs/biome": "^1.4.1",
     "@types/bun": "^1.0.0",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "vercel": "^33.0.2"
   },
   "dependencies": {
     "@vercel/analytics": "^1.1.1",
