--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,18 +15,15 @@ jobs:
             - name: Checkout code
               uses: actions/checkout@v4
 
-            - name: Setup Biome
-              uses: biomejs/setup-biome@v1
-              with:
-                version: 1.4.1
-
-            - name: Run Biome CI
-              run: biome ci .
-
             - name: Setup Go
               uses: actions/setup-go@v4
               with:
                 go-version: 1.20.2
 
+            - name: Go Lint
+              uses: golangci/golangci-lint-action@v3
+              with:
+                version: v1.55
+
             - name: Run Go Tests
-              run: go test
+              run: go test ./test
