Fix access to templates for local and prod

--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
     "trailingSlash": false,
     "functions": {
         "api/*.go": {
-            "includeFiles": "./template/*.gohtml"
+            "includeFiles": "template/*.gohtml"
         }
     }
 }
