--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,12 @@
     "version": 2,
     "cleanUrls": true,
     "trailingSlash": false,
+    "rewrites": [
+        {
+            "source": "/",
+            "destination": "/api/index.go"
+        }
+    ],
     "functions": {
         "api/*.go": {
             "includeFiles": "template/*.gohtml"
