Make logos accessible to serverless functions

--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
     ],
     "functions": {
         "api/*.go": {
-            "includeFiles": "template/*.gohtml"
+            "includeFiles": "{template/*.gohtml,logos/*.svg}"
         }
     }
 }
