Dismantle src dir; utils to api and tailwind.css to root

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "bunx vercel dev",
-    "build": "tailwindcss build -i src/tailwind.css -o public/css/styles.css --minify"
+    "build": "tailwindcss build -i tailwind.css -o public/css/styles.css --minify"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.1"
