--- a/.gitignore
+++ b/.gitignore
@@ -6,17 +6,10 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
-
 *.timestamp-*
 
 # Editor directories and files
 .vscode
-!.vscode/extensions.json
 .vercel
 .idea
 .DS_Store
@@ -26,4 +19,6 @@ dist-ssr
 *.sln
 *.sw?
 
-/public/css/styles.css
+# Build artifacts
+/public/tailwind.css
+tailwindcss
