--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,10 @@
         {
             "source": "/",
             "destination": "/api/index.go"
+        },
+        {
+            "source": "/markdown*",
+            "destination": "/api/markdown.go"
         }
     ],
     "functions": {
