--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
             "destination": "/api/index.go"
         },
         {
-            "source": "/markdown*",
+            "source": "/markdown",
             "destination": "/api/markdown.go"
         }
     ],
