--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
         "bradlc.vscode-tailwindcss",
         "golang.go",
         "dz4k.vscode-hyperscript-org",
-        "otovo-oss.htmx-tags"
+        "otovo-oss.htmx-tags",
+        "casualjim.gotemplate"
     ]
 }
