--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "version": 2,
-    "installCommand": "./scripts/install.sh -o linux -p x64",
+    "installCommand": "./scripts/install.sh",
     "buildCommand": "./scripts/build.sh",
     "rewrites": [
         {
