--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ lerna-debug.log*
 *.timestamp-*
 
 # Editor directories and files
-.vscode
+.env
 .vercel
 .idea
 .DS_Store
@@ -21,5 +21,4 @@ lerna-debug.log*
 
 # Build artifacts
 /public/tailwind.css
-tailwindcss
-main.go
+/resources
