--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "version": 2,
-    "installCommand": "./scripts/install.sh",
-    "buildCommand": "./scripts/build.sh",
+    "installCommand": "make install",
+    "buildCommand": "make build",
     "rewrites": [
         {
             "source": "/",
