--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,6 @@ lerna-debug.log*
 *.sw?
 
 # Build artifacts
-/public/tailwind.css
-tailwindcss-*
+/static/styles/styles.css
+/bin/*
+!/bin/.gitkeep
