--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,8 @@ lerna-debug.log*
 *.timestamp-*
 
 # Editor directories and files
-.env
+*.env
+!.example.env
 .vercel
 .idea
 .DS_Store
@@ -31,6 +32,8 @@ lerna-debug.log*
 
 # Build artifacts
 /static/styles/styles.css
+/static/sitemap.xml
+/static/*.html
 /bin
 /functions
 
