--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,10 +12,9 @@ jobs:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                directory: [/website, /api/health, /api/projects]
+                directory: [api/health, api/projects, website]
         steps:
             - uses: actions/checkout@v4
-            - run: cd ${{ matrix.directory }}
             - uses: actions/setup-go@v5
               with:
                   go-version: 1.22.2
