--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,8 @@ jobs:
             - uses: actions/setup-go@v5
               with:
                   go-version: 1.22.2
+            - name: Generate Templates
+              run: make templates
             - name: Lint
               uses: golangci/golangci-lint-action@v5
               with:
