changes, some fixed netlify ci?

--- a/.gitignore
+++ b/.gitignore
@@ -32,10 +32,8 @@ lerna-debug.log*
 
 # Build artifacts
 /static/styles/styles.css
-/static/sitemap.xml
-/static/*.html
-/bin
-/functions
+/static/*.*ml
+/tmp
 
 # Local Netlify folder
 .netlify
