--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
             - uses: actions/setup-go@v5
               with:
                   go-version: 1.22.2
+                  cache-dependency-path: "**/*.sum"
             - name: Generate Templates
               run: make templates
             - name: Lint
@@ -33,5 +34,6 @@ jobs:
             - uses: actions/setup-go@v5
               with:
                   go-version: 1.22.2
+                  cache-dependency-path: "**/*.sum"
             - name: Test
               run: make test
