--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                directory: [api/health, api/projects, website]
+                directory: [api/experience, api/health, api/projects, website]
         steps:
             - uses: actions/checkout@v4
             - uses: actions/setup-go@v5
