--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,15 +12,15 @@ jobs:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                directory: [api/experience, api/health, api/projects, website]
+                directory: [web, api/health, api/projects, api/experience]
         steps:
             - uses: actions/checkout@v4
             - uses: actions/setup-go@v5
               with:
-                  go-version: 1.22.2
+                  go-version: 1.22.5
                   cache-dependency-path: "**/*.sum"
-            - name: Generate Templates
-              run: make templates
+            - name: Install
+              run: make install
             - name: Lint
               uses: golangci/golangci-lint-action@v5
               with:
@@ -33,7 +33,7 @@ jobs:
             - uses: actions/checkout@v4
             - uses: actions/setup-go@v5
               with:
-                  go-version: 1.22.2
+                  go-version: 1.22.5
                   cache-dependency-path: "**/*.sum"
             - name: Test
               run: make test
