--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,18 @@
 # Logs
 logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+*-debug.log*
 *.timestamp-*
 
 # Editor directories and files
 *.env
 !.example.env
-.vercel
-.idea
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
 
-# Go test binary, built with `go test -c`
+# Go files
+go.work
+go.work.sum
 *.test
-
-# Go coverage tool output
 *.out
 
 # Ignore templ generated files
@@ -31,9 +20,8 @@ lerna-debug.log*
 *_templ.txt
 
 # Build artifacts
-website/static/styles/styles.css
-website/static/*.*ml
-/tmp
+dist
+make_html
 
 # Local Netlify folder
 .netlify
